# vast-admin-mcp

./: .dockerignore  .gitignore  .gitlab-ci.yml  .trivyignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README.pypi.md  RELEASE.md  TEMPLATE_STRUCTURE.md  bump-version.sh  docker-compose.yml  env.example  mcp_list_cmds_template.yaml  pyproject.toml  vast-admin-mcp-docker.sh  vast-admin-mcp.sh  view_templates_example.json
deploy/kubernetes/: README.md  create-tls-secret.sh  openshift-route.yaml  vast-admin-mcp.yaml
src/vast_admin_mcp/: __about__.py  __init__.py  __main__.py  cache.py  cli.py  client.py  command_executor.py  config.py  create_functions.py  data_processors.py  functions.py  mcp_server.py  setup.py  template_parser.py  utils.py
src/vast_admin_mcp/cli/: __init__.py  config_helpers.py  parsers.py
tests/: README.md  test_list_and_create.py  test_proxy.py
